# kickbacks-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
kickbacks_mcp/: __init__.py  client.py  server.py
