[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kickbacks-mcp"
version = "0.1.0"
description = "MCP server for Kickbacks.ai - Earn ad revenue from AI coding agent spinners"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent", email = "msgoku360@gmail.com"}
]
keywords = ["mcp", "kickbacks", "ad-revenue", "ai-agents", "claude-code", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
kickbacks-mcp = "kickbacks_mcp.server:cli_main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["kickbacks_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"